@@ -50,7 +50,7 @@ AC_CHECK_FUNCS(nautilus_burn_drive_can_eject)
 LIBS="$oldlibs"
 
 # Find the UI libraries
-PKG_CHECK_MODULES(UI, gtk+-2.0 >= 2.12  libglade-2.0  gconf-2.0  libgnomeui-2.0 >= 2.13.0 gio-2.0 gmodule-export-2.0 dbus-glib-1)
+PKG_CHECK_MODULES(UI, gtk+-2.0 >= 2.14  libglade-2.0  gconf-2.0 gio-2.0 gmodule-export-2.0 dbus-glib-1)
 AC_SUBST(UI_CFLAGS)
 AC_SUBST(UI_LIBS)
 
