@@ -1,3 +1,12 @@
+2008-12-22  Ross Burton  <ross@linux.intel.com>
+
+	* configure.in:
+	* src/sj-main.c:
+	* src/sj-extracting.c:
+	* src/sj-prefs.c:
+	Drop libgnome and instead use the new GTK+ hotness.  Thanks Iain
+	Holmes and Emilio Pozuelo Monfort (#556793)
+
 2008-12-22  Jonathan Matthew  <jonathan@d14n.org>
 
 	* libjuicer/sj-metadata-musicbrainz3.c: (mb_list_albums):
